objects/Sales_Tracker__c.object
<CustomObject>
    <fields>
        <fullName>Converion_Rate__c</fullName>
        <formula>SU__c / EOIs__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Converion Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EOI_TargetPC__c</fullName>
        <formula>EOIs__c / EOI_Target__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>EOI Target %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>EOI_Target__c</fullName>
        <label>EOI Target</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EOIs__c</fullName>
        <label>EOIs</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FSM_Target__c</fullName>
        <label>FSM Target</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FSM__c</fullName>
        <label>FSM</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LAC_Target__c</fullName>
        <label>LAC Target</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LAC__c</fullName>
        <label>LAC</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Local_Authority__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Local Authority</label>
        <referenceTo>Local_Authority__c</referenceTo>
        <relationshipLabel>Sales Trackers</relationshipLabel>
        <relationshipName>Sales_Trackers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Necessary_Conversion_Rate__c</fullName>
        <formula>SU_Target__c / EOIs__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Necessary Conversion Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>PC_Target__c</fullName>
        <label>PC Target</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PC__c</fullName>
        <label>PC</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PRU_Target__c</fullName>
        <label>PRU Target</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PRU__c</fullName>
        <label>PRU</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Paid_TargetPC__c</fullName>
        <formula>Paid__c / Paid_Target__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Paid Target %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Paid_Target__c</fullName>
        <label>Paid Target</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Paid__c</fullName>
        <label>Paid</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SEN_Target__c</fullName>
        <label>SEN Target</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SEN__c</fullName>
        <label>SEN</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SU_TargetPC__c</fullName>
        <formula>SU__c / SU_Target__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SU Target %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>SU_Target__c</fullName>
        <label>SU Target</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SU__c</fullName>
        <label>SU</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>School_Activity__c</fullName>
        <label>School Activity</label>
        <referenceTo>School_Activities__c</referenceTo>
        <relationshipLabel>Sales Trackers</relationshipLabel>
        <relationshipName>Sales_Trackers</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Sales Tracker</label>
    <nameField>
        <label>Sales Tracker Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sales Trackers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>